add filter to phrase index endpoint / create necessary dtos
